# annie

./: ._hanon.py  .ghci  .gitignore  README.md  annie.cabal  gitignore  stack.yaml
app/: annie.hs
py/: hanon.py
src/: Annie.hs
src/Annie/: Mapper.hs
src/HAnon/: Lib.hs  Mapper.hs
test/: Spec.hs  testrun.sh
