name:                annie
version:             0.0.0.1
synopsis:            Tool for anonimising textfiles
description:         A tool for annonimising text files, rememebring the
                     substitutions in a level-db database
homepage:            https://github.com/githubuser/hanon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

source-repository head
  type:                git
  location:            https://github.com/cdornan/annie

library
  hs-source-dirs:      src
  exposed-modules:     Annie
                     , HAnon.Lib
                     , HAnon.Mapper
  build-depends:       base                 >= 4.7 && < 5
                     , array                == 0.5.*
                     , data-default         == 0.7.*
                     , higher-leveldb       == 0.4.*
                     , leveldb-haskell      == 0.6.*
                     , utf8-string          == 1.0.*
                     , random-extras        == 0.19.*
                     , random-fu            == 0.2.*
                     , random-source        == 0.3.*
                     , bytestring           == 0.10.*
                     , regex                == 1.0.*
                     , text                 == 1.2.*
                     , unordered-containers == 0.2.8.0
                     , regex-tdfa           == 1.2.*
  default-language:    Haskell2010
  GHC-Options:        -Wall
                      -fwarn-tabs

executable annie
  hs-source-dirs:      app
  main-is:             annie.hs
  build-depends:       base                 >= 4.7 && < 5
                     , annie
                     , options              == 1.2.*
                     , higher-leveldb       == 0.4.*
  default-language:    Haskell2010
  GHC-Options:        -Wall
                      -fwarn-tabs
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

test-suite hanon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base                 >= 4.7 && < 5
                     , annie
                     , bytestring           == 0.10.*
                     , hspec                == 2.4.*
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -fwarn-tabs
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
